<resources>
    <string name="app_name">A_Diary</string>
    <string name="baslik3">Busegokk</string>
    <string name="aciklama3">#sahil #aşk #izmir #bostanlı #rakı #keyif #deniz #manzara #love #fuckaround #insatagood</string>
    <string name="baslik2">Busegokk</string>
    <string name="aciklama2">🌊🌅🍺🍷🌊🌅Sanirim bu fotografi mart da cekmistim ..Gunbatimini izleyenler 📸🙋
İzmirde aksamlari , deniz kenarinda yada cimlerde oturmayi seviyoruz 🤗 yaz veya kis mevsimi farketmiyor 😃
(cep telefonum ile cekilmistir)</string>
    <string name="baslik">Busegokk</string>
    <string name="aciklama">Yine bir gunbatimi 😍Mutlu pazarlar🌅🌊🏃🚴🚣🎧📸
(cep telefonum ile cekilmistir)</string>
</resources>